--- a/templates/base.phtml
+++ b/templates/base.phtml
@@ -5,9 +5,9 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Doctowebline</title>
+  <title>Doctowebline - Prise de rendez-vous avec des docteurs en ligne</title>
   <meta name="robots" content="index,follow,snippet">
-  <meta name="description" content="Trouvez un professionnel de santé en ligne avec Doctolib. Prenez rendez-vous en quelques clics avec un médecin généraliste, un spécialiste, un dentiste, un kiné et bien d'autres. Consultez des avis et des disponibilités en temps réel. Simplifiez la prise de rendez-vous médical dès maintenant.">
+  <meta name="description" content="Trouvez un professionnel de santé en ligne avec Doctowebline. Prenez rendez-vous en quelques clics avec un médecin généraliste, un spécialiste, un dentiste, un kiné et bien d'autres. Consultez des avis et des disponibilités en temps réel. Simplifiez la prise de rendez-vous médical dès maintenant.">
   <link rel="stylesheet" href="http://localhost/Code/Projet/css/style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -24,7 +24,7 @@
 
     <nav class="navbar">
       <div class="navbar-left">
-        <a href="Accueil"><img src="img/doctowebline-high-resolution-logo-color-on-transparent-background.png" class="logo" alt="Doctowebline Logo"></a>
+        <a href="Accueil"><img src="img/doctowebline-high-resolution-logo-color-on-transparent-background.png" class="logo" alt="Doctowebline Logo Rendez-vous Docteur En ligne"></a>
       </div>
       <div class="navbar-right">
         <ul class="mobile-menu">
