--- a/templates/modifdoc.phtml
+++ b/templates/modifdoc.phtml
@@ -7,20 +7,36 @@
     <input type="hidden" name="id" value="<?= $medecin['id'] ?>">
     <label for="nom">Nom :</label>
     <input type="text" name="nom" id="nom" value="<?= $medecin['nom'] ?>">
+    <?php if (isset($errors['nom'])) : ?>
+      <p class="message error"><?= $errors['nom']; ?></p>
+    <?php endif; ?>
+
     <label for="email">Email :</label>
     <input type="email" name="email" id="email" value="<?= $medecin['email'] ?>">
+    <?php if (isset($errors['email'])) : ?>
+      <p class="message error"><?= $errors['email']; ?></p>
+    <?php endif; ?>
+
     <label for="specialite">Spécialité :</label>
     <select name="specialite" id="specialite_id">
       <?php foreach ($specialites as $specialite) : ?>
         <option value="<?= $specialite['id'] ?>" <?= ($specialite['id'] == $medecin['specialite_id']) ? 'selected' : '' ?>><?= $specialite['nom'] ?></option>
       <?php endforeach; ?>
     </select>
+    <?php if (isset($errors['specialite_id'])) : ?>
+      <p class="message error"><?= $errors['specialite_id'] ?></p>
+    <?php endif; ?>
+
     <label for="ville">Ville :</label>
     <select name="ville" id="ville_id">
       <?php foreach ($villes as $ville) : ?>
         <option value="<?= $ville['id'] ?>" <?= ($ville['id'] == $medecin['ville_id']) ? 'selected' : '' ?>><?= $ville['nom'] ?></option>
       <?php endforeach; ?>
     </select>
+    <?php if (isset($errors['ville_id'])) : ?>
+      <p class="message error"><?= $errors['ville_id'] ?></p>
+    <?php endif; ?>
+    
     <input type="submit" name="modifier" class="btn" value="Modifier">
   </form>
 </section>
