--- a/templates/docteur.phtml
+++ b/templates/docteur.phtml
@@ -3,9 +3,16 @@
   <form method="post" class="form" action="addDoc">
     <label for="nom">Nom:</label>
     <input type="text" id="nom" name="nom" required><br>
+    <?php if (isset($errors['nom'])) : ?>
+      <p class="message error"><?= $errors['nom']; ?></p>
+    <?php endif; ?>
+
 
     <label for="email">Email:</label>
     <input type="email" id="email" name="email" required><br>
+    <?php if (isset($errors['email'])) : ?>
+      <p class="message error"><?= $errors['email']; ?></p>
+    <?php endif; ?>
 
     <label for="specialite_id">Spécialité :</label>
     <select id="specialite_id" name="specialite_id">
